--- a/.github/workflows/translate_readme.yml
+++ b/.github/workflows/translate_readme.yml
@@ -67,9 +67,8 @@ jobs:
 
     - name: Download translated files
       run: |
-        mkdir docs/readme/translated_files
-        #gsutil -m cp gs://sag_readme_translated/* translated_files/
-        gcloud storage cp gs://sag_readme_translated/* docs/readme/translated_files/
+        mkdir translated_files
+        gcloud storage cp gs://sag_readme_translated/* translated_files/
 
     - name: Cleanup bucket
       if: always()
@@ -85,7 +84,7 @@ jobs:
         git checkout -b translated-branch
 
         # Copy the translated files to the repository
-        cp -r translated_files/* .
+        cp -r translated_files ./docs/readme/
 
         # Commit and push the changes
         git add .
