--- a/.github/workflows/translate_readme.yml
+++ b/.github/workflows/translate_readme.yml
@@ -71,10 +71,10 @@ jobs:
 
     - name: Create Pull Request
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GH_TOKEN: ${{ github.token }}
       run: |
         # Configure the GitHub CLI
-        # echo "${{ secrets.GH_TOKEN }}" | gh auth login --with-token
+        gh auth login
 
         # Create a new branch for the translated files
         git checkout -b translated-branch
