--- a/.github/workflows/translate_readme.yml
+++ b/.github/workflows/translate_readme.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: 'read'
+      contents: 'write'
       pull-requests: 'write'
       id-token: 'write'
 
@@ -64,10 +64,10 @@ jobs:
         mkdir translated_files
         gcloud storage cp gs://sag_readme_translated/* translated_files/
 
-    - name: Cleanup bucket
-      if: always()
-      run: |
-        gcloud storage rm gs://sag_readme_translated --recursive
+    # - name: Cleanup bucket
+    #   if: always()
+    #   run: |
+    #     gcloud storage rm gs://sag_readme_translated --recursive
 
     - name: Create Pull Request
       env:
