--- a/.github/workflows/translate_readme.yml
+++ b/.github/workflows/translate_readme.yml
@@ -88,4 +88,4 @@ jobs:
         git push origin translated-branch
 
         # Create a pull request
-        gh pr create --base main --head translated-branch --title "Translated README"
+        gh pr create --base main --head translated-branch --title "Translated README" --body "This is an automated pull request to add translated README files for these languages: ${{ github.event.inputs.languages }}"
