--- a/.github/workflows/translate_readme.yml
+++ b/.github/workflows/translate_readme.yml
@@ -61,8 +61,8 @@ jobs:
 
     - name: Download translated files
       run: |
-        mkdir translated_files
-        gcloud storage cp gs://sag_readme_translated/* translated_files/
+        mkdir docs/readme/translated_files
+        gcloud storage cp gs://sag_readme_translated/* docs/readme/translated_files/
 
     # - name: Cleanup bucket
     #   if: always()
@@ -81,7 +81,7 @@ jobs:
         git pull origin translated-branch
 
         # Copy the translated files to the repository
-        cp -r translated_files ./docs/readme/
+        # mv -r translated_files ./docs/readme/
 
         # Commit and push the changes
         git add .
