--- a/.github/workflows/translate_readme.yml
+++ b/.github/workflows/translate_readme.yml
@@ -61,11 +61,11 @@ jobs:
 
     - name: Download translated files
       run: |
-        file_dir="docs/readme/translated_files/"
-        mkdir $file_dir
-        gcloud storage cp gs://sag_readme_translated/* $file_dir
-        for f in $(ls ${file_dir}/*.html); do
-            new_name=$(echo $f | sed 's|sag_readme_||' | sed 's|_translations||'
+        fileDir="docs/readme/translated_files"
+        mkdir $fileDir
+        gcloud storage cp gs://sag_readme_translated/* ${fileDir}/
+        for f in $(ls ${fileDir}/*.html); do
+            new_name=$(echo $f | sed 's|sag_readme_||' | sed 's|_translations||')
             mv $f $new_name    
         done
 
