--- a/.github/workflows/translate_readme.yml
+++ b/.github/workflows/translate_readme.yml
@@ -83,7 +83,9 @@ jobs:
 
         # Create a new branch for the translated files
         git checkout -b translated-branch
-        git pull
+        if [ $(git ls-remote --heads origin refs/heads/translated-branch | wc -l) == 1 ] ; then
+            git pull origin translated-branch
+        fi
 
         # Copy the translated files to the repository
         # mv -r translated_files ./docs/readme/
