--- a/.github/workflows/deploy_pages.yml
+++ b/.github/workflows/deploy_pages.yml
@@ -40,7 +40,7 @@ jobs:
         uses: actions/jekyll-build-pages@v1
         with:
           source: ./docs/images
-          destination: ./images
+          destination: ./_site/images
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
 
