--- a/.github/workflows/deploy_pages.yml
+++ b/.github/workflows/deploy_pages.yml
@@ -2,6 +2,8 @@
 name: Deploy Multilanguage README to GitHub Pages
 
 on:
+  push:
+    branches: [ "main" ]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
