--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,8 @@ jobs:
       - run:
           name: Install MySQL Client
           command: |
-            sudo apt-get update
-            sudo apt-get install mysql-client-core-8.0
+            apt-get update
+            apt-get install mysql-client-core-8.0
       - run:
           name: Build the REDCap Image
           command: |
@@ -30,7 +30,7 @@ jobs:
       - run:
           name: Change eDocs folder permissions
           command: |
-            sudo chmod 777 /var/edocs              
+            chmod 777 /var/edocs              
       - run:
           name: Run Tests
           command: |
