--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
               "$(. /etc/os-release && echo "$VERSION_CODENAME")" stable" | \
               tee /etc/apt/sources.list.d/docker.list > /dev/null
             apt-get update
-            apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+            apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
       - run:
           name: Build the REDCap Image
           command: |
