--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,9 +45,7 @@ jobs:
       - run:
           name: Start Docker REDCap Container
           command: |
-            pwd
-            ls -la
-            sudo cd /root/project/redcap_docker
+            cd /home/circleci/project/redcap_docker
             docker compose up -d
       - run:
           name: Change eDocs folder permissions
