--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -12,9 +12,9 @@ jobs:
         sudo apt-get update
         sudo apt-get install mysql-client-core-8.0
     - name: Build the REDCap Image
-      run: git clone --branch v11.1.29 https://github.com/aldefouw/redcap_docker
+      run: git clone --branch v11.1.29 git@github.com:aldefouw/redcap_docker.git
     - name: Get REDCap Source
-      run: git clone --branch v13.1.27 https://github.com/AndrewPoppe/redcap_source www
+      run: git clone --branch v13.1.27 git@github.com:AndrewPoppe/redcap_source.git www
     - name: Start Docker REDCap Container
       run: |
         cd redcap_docker
