--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         repository: AndrewPoppe/redcap_source
         ref: v13.1.27
-        token: ${{ secrets.REDCAP_SOURCE_DEPLOY_KEY }}
+        #token: ${{ secrets.REDCAP_SOURCE_DEPLOY_KEY }}
         path: ${GITHUB_WORKSPACE}/www
     - name: Start Docker REDCap Container
       run: |
