--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -29,14 +29,13 @@ jobs:
     - uses: actions/checkout@v3
       with:
         path: www/modules/security_access_groups_v99
-    - name: start playwright setup
-      run: |
-        cd www/modules/security_access_groups_v99/tests/playwright
     - uses: actions/setup-node@v3
       with:
         node-version: 18
     - name: Install dependencies
-      run: npm install
+      run: |
+        cd www/modules/security_access_groups_v99/tests/playwright
+        npm install
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright tests
