--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -33,22 +33,23 @@ jobs:
       with:
         node-version: 18
     - name: Install dependencies
-      run: |
-        cd www/modules/security_access_groups_v99/tests/playwright
-        npm install
+      working-directory: ./www/modules/security_access_groups_v99/tests/playwright
+      run: npm install
     - name: Install Playwright Browsers
+      working-directory: ./www/modules/security_access_groups_v99/tests/playwright
       run: npx playwright install --with-deps
     - name: Run Playwright tests
+      working-directory: ./www/modules/security_access_groups_v99/tests/playwright
       run: npx playwright test
     - uses: actions/upload-artifact@v3
       if: always()
       with:
         name: playwright-report
-        path: playwright-report/
+        path: ./www/modules/security_access_groups_v99/tests/playwright/playwright-report/
         retention-days: 30
     - uses: actions/upload-artifact@v3
       if: always()
       with:
         name: test-results
-        path: test-results/
+        path: ./www/modules/security_access_groups_v99/tests/playwright/test-results/
         retention-days: 30
