--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -41,9 +41,10 @@ jobs:
           --header 'Content-Type: application/x-www-form-urlencoded' \
           --data-urlencode 'init-table=true' \
           --data-urlencode 'install-option=upload' \
-          --data-urlencode 'init-table-email=andrew.poppe@yale.edu'
+          --data-urlencode 'init-table-email=andrew.poppe@yale.edu' \
           --data-urlencode 'installer-upload=redcap_source/REDCap_v13.1.27.zip'
-          timeout 300 bash -c 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' localhost:13740/index.php)" != "200" ]]; do echo "not yet"; sleep 5; done' || false 
+      - name: Wait for REDCap to start
+        run: timeout 300 bash -c 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' localhost:13740/index.php)" != "200" ]]; do echo "not yet"; sleep 5; done' || false 
       - uses: actions/checkout@v3
         with:
           path: www/modules/security_access_groups_v99
