Add file to POST

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -42,7 +42,8 @@ jobs:
           --data-urlencode 'init-table=true' \
           --data-urlencode 'install-option=upload' \
           --data-urlencode 'init-table-email=andrew.poppe@yale.edu' \
-          --data-urlencode 'installer-upload=redcap_source/REDCap_v13.1.27.zip'
+          --data-urlencode 'installer-upload=redcap_source/REDCap_v13.1.27.zip' \
+          -F 'installer-upload=@redcap_source/REDCap_v13.1.27.zip'
       - name: Wait for REDCap to start
         run: timeout 300 bash -c 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' localhost:13740/index.php)" != "200" ]]; do echo "not yet"; sleep 5; done' || false 
       - uses: actions/checkout@v3
