use correct file path

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -42,7 +42,7 @@ jobs:
           --form 'init-table=true' \
           --form 'install-option=upload' \
           --form 'init-table-email=andrew.poppe@yale.edu' \
-          --form 'installer-upload=@redcap_source/REDCap_v13.1.27.zip'
+          --form 'installer-upload=@REDCap_v13.1.27.zip'
       - name: Wait for REDCap to start
         run: timeout 300 bash -c 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' localhost:13740/index.php)" != "200" ]]; do echo "not yet"; sleep 5; done' || false 
       - uses: actions/checkout@v3
