--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -37,6 +37,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
           path: security_access_groups
+      - name: Move REDCap Source File
+        run: mv redcap13.1.27.zip security_access_groups/tests/playwright/setup/
       - uses: actions/setup-node@v3
         with:
           node-version: 18
