--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -84,7 +84,7 @@ jobs:
       #   working-directory: ./www/modules/security_access_groups_v99/tests/playwright
       #   run: npx playwright install --with-deps
       - name: Move module files
-        run: cp -r ./security_access_groups/* ./redcap-docker-compose/www/modules/security_access_groups_v99/
+        run: mv ./security_access_groups ./redcap-docker-compose/www/modules/security_access_groups_v99
       - name: Run Playwright tests
         working-directory: ./redcap-docker-compose/www/modules/security_access_groups_v99/tests/playwright
         run: npx playwright test
