--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -84,7 +84,9 @@ jobs:
       #   working-directory: ./www/modules/security_access_groups_v99/tests/playwright
       #   run: npx playwright install --with-deps
       - name: Move module files
-        run: mv ./security_access_groups ./redcap-docker-compose/www/modules/security_access_groups_v99
+        run: |
+          sudo chmod -R 777 ./redcap-docker-compose/www/modules
+          mv ./security_access_groups ./redcap-docker-compose/www/modules/security_access_groups_v99
       - name: Run Playwright tests
         working-directory: ./redcap-docker-compose/www/modules/security_access_groups_v99/tests/playwright
         run: npx playwright test
